--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash-es": "^4.17.21",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router": "^7.8.1",
     "tailwindcss": "^4.1.6",
     "zustand": "^5.0.7"
